# mango-compiler

./: .editorconfig  .gitattributes  .gitignore  LICENSE  circle.yml  mango-compiler.cabal  mango-langref.html
src/: Main.hs
src/Mango/Compiler/: Binder.hs  CodeGen.hs  Emitter.hs  Error.hs  Lexer.hs  Parser.hs  Symbols.hs  Syntax.hs  Verifier.hs
