name:                mango-compiler
version:             0.1.0.0
author:              Klaus Hartke
license:             MIT
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

executable mango
  main-is:             Main.hs
  other-modules:       Mango.Compiler.Binder, Mango.Compiler.CodeGen, Mango.Compiler.Emitter, Mango.Compiler.Error, Mango.Compiler.Lexer, Mango.Compiler.Parser, Mango.Compiler.Symbols, Mango.Compiler.Syntax, Mango.Compiler.Verifier
  other-extensions:    NoImplicitPrelude, FlexibleInstances, TypeFamilies, OverloadedStrings, BangPatterns, ScopedTypeVariables
  build-depends:       base >=4.10 && <4.11, mtl >=2.2 && <2.3, vector >=0.12 && <0.13, bytestring >=0.10 && <0.11, megaparsec >=6.3 && <6.4, containers >=0.5 && <0.6, parser-combinators >=0.2 && <0.3, text >=1.2 && <1.3, transformers >=0.5 && <0.6, parallel >=3.2 && <3.3, cryptonite >=0.24 && <0.25, memory >=0.14 && <0.15, array >=0.5 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O -threaded -rtsopts -with-rtsopts=-N
